FORM_USAC/src/Analyzer/Javacc/grammar.jj
options {
    STATIC = false ;
}
    /*
    |--------------------------------------------------------------------------
    | METODOS
    |-------------------------------------------------------------------------- 
    */

PARSER_BEGIN(parser) 
package Analyzer.Javacc; 
import java.io.InputStream; 
import Analyzer.Tree.*; 
import Analyzer.Tree.Nodes.*;
public class parser { 
    public tree arbol=new tree();
    
    public parser(){
    
    }

    public void inicializar(InputStream stream ){
        try{
                
                parser analizador =new parser(stream);
                
                arbol=analizador.Programa(arbol); 
                
                this.println("Analisis  exitoso! :)");
            }
        catch(ParseException e){
            this.error(e, arbol);
            /* raiz.tablaSimbolos.tablaErrores.insertErrorSemantic("",0,0,e.getMessage());
            raiz.tablaSimbolos.tablaErrores.println("Error en el parser"); */
            
        }
    }

    public void error_skipto(int kind) { 
        ParseException e = generateParseException();  // generate the exception object.
        System.out.println(e.toString());  // print the error message
        Token t;
        int cont=0;
        do {
            t = getNextToken();   
        } while (t.kind != kind && t.kind != EOF);  
    }

    public void error(ParseException e, tree arbol){
        
        arbol.tablaSimbolos.tablaErrores.println("Error en el parser, Recuperandose");
        int maxSize = 0;
        for (int i = 0; i < e.expectedTokenSequences.length; i++) {
            if (maxSize < e.expectedTokenSequences[i].length) {
                maxSize = e.expectedTokenSequences[i].length;
            }
            for (int j = 0; j < e.expectedTokenSequences[i].length; j++) {
                int indice=e.expectedTokenSequences[i][j];
                if(e.tokenImage[indice].contains("&")){
                    arbol.tablaSimbolos.tablaErrores.insertErrorSyntax("encuesta",-2,-2,"No se encontró fila de finalizacion"); 
                }else if(e.tokenImage[indice].contains("_opcion")){
                    arbol.tablaSimbolos.tablaErrores.insertErrorSyntax("encuesta",-2,-2,"No se encontró fila de inicio de grupo/ciclo"); 
                }else{
                    arbol.tablaSimbolos.tablaErrores.insertErrorSyntax("encuesta",-2,-2,e.getMessage()); 
                    arbol.tablaSimbolos.tablaErrores.println("Se esperaba:"+e.tokenImage[indice]);

                }
                
 
            } 
        }
        //System.out.println(e);
    }


    public void println(Object mensaje){
        arbol.tablaSimbolos.tablaErrores.println(mensaje);
    }
    public void print(Object mensaje){
        arbol.tablaSimbolos.tablaErrores.print(mensaje);
    }

    public static void imprimirToken(String t){
        //tablaSimbolos.tablaErrores.println(t);
    }
} 

PARSER_END(parser)

    /*
    |--------------------------------------------------------------------------
    | TOKENS
    |-------------------------------------------------------------------------- 
    */


        /*
        +-------------------------+
        |   Palabra Reservada
        */

TOKEN :
{
        <tPosX          : "posX">
            {parser.imprimirToken("tPosX"+image);}
    |   <tPosY          : "posY">
            {parser.imprimirToken("tPosY"+image);}
    |   <tAmbito        : "_ambito">
            {parser.imprimirToken("_ambito"+image);}


    |   <tOpcion        : "_opcion">
            {parser.imprimirToken("tOpcion"+image);}
    |   <tEncuesta        : "_encuesta">
            {parser.imprimirToken("tEncuesta"+image);}
    |   <tConfiguracion        : "_configuracion">
            {parser.imprimirToken("tConfiguracion"+image);}        

}

        /*
        +-------------------------+
        |   Identificadores
        */

TOKEN : 
{
        <tNumero: (["0"-"9"])+ >
            {parser.imprimirToken("NUMERO->"+image);}
}

TOKEN : {
        <tIdentificador: <tLetra>(<tLetra>|<tNumero>|"_")*>
            {parser.imprimirToken("Identificador->"+image);}
    |   <#tLetra: (["a"-"z","A"-"Z"])> 
}


        /*
        +-------------------------+
        |   Simbolos
        */

TOKEN :
{
         <tMayorQue      : ">" >
            {parser.imprimirToken("tMayorQue->"+image);}
    |    <tMenorQue      : "<" >
            {parser.imprimirToken("tMenorQue->"+image);}

    |    <tDosPuntos      : ":" >
            {parser.imprimirToken("tDosPntos->"+image);}
    
    |    <tComa      : "," >
            {parser.imprimirToken("tComa->"+image);}

    |    <tAmperson      : "&" >
            {parser.imprimirToken("tAmperson->"+image);}

    |    <tAbreCorchete   : "[" >
            {parser.imprimirToken("tAbreCorchete->"+image);}
    |    <tCierraCorchete : "]" >
            {parser.imprimirToken("tCierraCorchete->"+image);}
    |    <tGuion : "-" >
            {parser.imprimirToken("tGuion->"+image);}
         
}





        /*
        +-------------------------+
        |   SKIP
        */


SKIP    : { " " }
SKIP    : { "\n" | "\r" | "\r\n" }
SKIP   : { 
    <OTHER:   ~[]>{/* this.imprimirToken("TokenDesconocido->"+image); */}
}


        /*
        +-------------------------+
        |   Cadena
        */

 
MORE : {
    <inicio : "/>" > :s2
}

<s2> MORE :
{
    <cual : (~[])>
}
<s2> TOKEN :
{
    <tString : "</"  >{parser.imprimirToken("tString->"+image); } : DEFAULT
}






    /*
    |--------------------------------------------------------------------------
    | GRAMATICA
    |-------------------------------------------------------------------------- 
    */

        /*
        +-------------------------+
        |   Programa
        */

tree Programa(tree arbol):
{ 

}
{
    arbol=S(arbol) 
    < EOF > 
    {return arbol;}
}

        /*
        +-------------------------+
        |   S
        */

tree S(tree arbol):
{

    nodeModel encuesta=new nodeModel();
    nodeModel opcion=new nodeModel();
    nodeModel configuracion=new nodeModel();
}
{

    <tEncuesta>
    encuesta=ENCUESTA(arbol)
    {arbol.raiz.insertChildren(encuesta);} 
     /* {arbol.raiz.imprimir();}   */
    <tOpcion>
    opcion=OPCION(arbol)
    {arbol.raiz.insertChildren(opcion);}  
    <tConfiguracion>
    configuracion=CONFIGURACION(arbol) 
    {arbol.raiz.insertChildren(configuracion);} 
    {return arbol;}
     
}


nodeModel ENCUESTA(tree rama):
{
        padreEncuesta  nodo=new padreEncuesta(rama.tablaSimbolos);
        nodeModel temp =new nodeModel();
}
{
    {rama.tablaSimbolos.tablaErrores.println("ENCUESTA");}
    temp=LST_P(rama,nodo) 
    /* {nodo.insertChildren(temp);} */
     /* {nodo.imprimir();}   */
    
    {return nodo;}
}


nodeModel OPCION(tree rama):
{ 
    padreOpcion  nodo=new padreOpcion(rama.tablaSimbolos);
        nodeModel temp =new nodeModel();
}
{
    {rama.tablaSimbolos.tablaErrores.println("OPCION");}
    temp=LST_P2(nodo,rama) 
    /* {nodo.insertChildren(temp);} */
    //{nodo.imprimir();} 
    {return nodo;}

}


nodeModel CONFIGURACION(tree rama):
{
        padreConfiguracion  nodo=new padreConfiguracion(rama.tablaSimbolos);
        nodeModel temp =new nodeModel();
}
{       
    {rama.tablaSimbolos.tablaErrores.println("CONFIGURACION");}
    temp=LST_P2(nodo,rama) 
    /* {nodo.insertChildren(temp);} */
    //{nodo.imprimir();}  
    {return nodo;}
    |
    epsilon() 
    {return nodo;}
}

        /*
        +-------------------------+
        |   LST_P2
        */

nodeModel LST_P2(nodeModel nodo,tree arbol):
{
    nodeFila child;
}
{
    child=P2(arbol)
    {nodo.insertChildren(child);}

    LST_P2(nodo, arbol) 
    
    {return nodo;}
    | 
    epsilon()
 {return nodo;}
}

        /*
        +-------------------------+
        |   P2
        */

nodeFila P2(tree arbol):
{
    nodeFila nodRetorno=new nodeFila(arbol.tablaSimbolos);
}
{
    try{
         
        <tIdentificador> 
 
        <tDosPuntos>
        <tAbreCorchete>

        LST_ATRIBUTOS(nodRetorno.atrib)
        
        <tCierraCorchete> 

    }catch(ParseException e){
        this.error(e, arbol);
    }

    {return nodRetorno;}

}

    /*
    |--------------------------------------------------------------------------
    | PARA ENCUESTA
    |-------------------------------------------------------------------------- 
    */
        /*
        +-------------------------+
        |   LST_P
        */

nodeModel LST_P(tree arbol, nodeModel nodo):
{
    nodeModel child;
}
{
    child=P(arbol)
    {nodo.insertChildren(child);} 
    LST_P(arbol, nodo)
    
    {return nodo;}
    |
    epsilon()
    {return nodo;}
}

        /*
        +-------------------------+
        |   P
        */

nodeModel P(tree arbol):
{ 
    nodePregunta ramaPregunta=new nodePregunta(arbol.tablaSimbolos);
    nodeModelGrupoCiclo rama=new nodeModelGrupoCiclo(); 
    Token tIdInicio;
    Token tIdFin;

    atributos firstAtrib=new atributos();
    atributos secondAtrib=new atributos();

    nodeModel nod=new nodeModel();
}
{
    try{
         
        <tIdentificador> 
 
        <tDosPuntos>
        <tAbreCorchete>
        
        LST_ATRIBUTOS(ramaPregunta.atrib)
        
        <tCierraCorchete>
        {return ramaPregunta;}
        |
        <tMenorQue>
        tIdInicio=<tIdentificador>
        {
            if(tIdInicio.image.equals("grupo")){
                rama=new nodeGrupo(arbol.tablaSimbolos);
            }else{
                rama=new nodeCiclo(arbol.tablaSimbolos);
            }
        }  
        firstAtrib=PQ()
        {rama.firstAtrib(firstAtrib,tIdInicio.image);}
        
        nod=LST_P(arbol, rama)
        

        <tAmperson>
        tIdFin=<tIdentificador>  
        secondAtrib = PQ()
        {rama.secondAtrib(secondAtrib, tIdFin.image);}
        {return rama;}

    }catch(ParseException e){
        this.error(e, arbol);
    }

    {return ramaPregunta;}

}

        /*
        +-------------------------+
        |   PQ
        */

atributos PQ():
{

    atributos atr=new atributos();
}
{
    <tGuion>
    <tMayorQue>
    <tAbreCorchete>

    LST_ATRIBUTOS( atr)
    
    <tCierraCorchete>

    {return atr;}
}

        /*
        +-------------------------+
        |   LST_ATRIBUTOS
        */

atributos LST_ATRIBUTOS(atributos atr):
{ 
    Token posX;
    Token posY;
    Token key;
    Token value;
    Token ambito;
}
{
    
        <tMenorQue>

        
        <tAmbito>
        <tDosPuntos>
        ambito=<tIdentificador>

        <tPosX>
        <tDosPuntos>
        posX=<tNumero>
        
        <tPosY>
        <tDosPuntos>
        posY=<tNumero>

        key=<tIdentificador>

        value=<tString>
        
        <tIdentificador>
        <tMayorQue>
        {
            atr.insert(key.image, ambito.image,value.image,posX.image, posY.image);
        }  
        LST_ATRIBUTOS(atr)
         {return atr;}
        |
        epsilon()
    {return atr;}
}



        /*
        +-------------------------+
        |   epsilon
        */

void epsilon () : 
{

} 
{  
    {
        this.imprimirToken("epsilon");
    } 
}
